# parakeet-stt

./: .gitignore  .pre-commit-config.yaml  74-aliases-functions.bash  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF-raw-ptt-paste-gap-2026-03-08.md  HANDOFF-stt-cross-surface-injection-2026-02-19.md  LICENSE  PASTE-GAP-EVIDENCE-GATHERING-USER-MANUAL.md  PASTE-RELIABILITY-ANALYSIS-2026-03-10.md  README.md  ROADMAP.md  SPEC.md  STATE-OF-STT-DAEMON-SERVER-2026-02-23.md  STREAMING-OVERLAY-ROLL-OUT-AND-VERIFICATION-PLAN.md  codemap-deepwiki-uinput.md  deep-research-report-offlinevsstreaming.md  deep-research-report.md  deep-research-streaming-quality.md  gpt-design.md  justfile  justfile.overlay-dev
deploy/: parakeet-daemon.service  parakeet-ptt.service
docs/: HANDOFF-clipboard-injector-2026-02-08.md  HANDOFF-stt-cross-surface-injection-2026-02-19.md  SPEC.md  STT-INPUT-INJECTION-ROADMAP-2026-02.md  SYSTEM-SPECS-and-FULL-STACK-REFERENCES-2026-02-08.md  chatgpt-Compositor-Agnostic Text Injection Strategy for Parakeet STT (Replacing `wtype`).docx  final-gemini-Wayland Input Injection Analysis.md  gemini-deeper-context-noProomptEng-Wayland Input Debugging Deep Dive.md  gemini-less-context-DeepResearch-Wayland Input Debugging and Solutions.md  gpt-design.md  paste-gap-evidence-gathering-user-manual.md  perplexity-shallow-paste-solutin.md  roadmap-suggestions.md  stt-troubleshooting.md
docs/REPORTS/: rigorous-architecture-risk-audit-2026-03-07.md  stt-evaluation-technical-report.md
docs/archive/: .gitignore  Closing the Streaming WER Gap on Parakeet TDT in NeMo-deep-research-report.md  HANDOFF-clipboard-injector-2026-02-08.md  HANDOFF-raw-ptt-paste-gap-2026-03-08.md  HANDOFF-stt-cross-surface-injection-2026-02-19.md  OVERLAY-FLASH-BUG.md  PASTE-RELIABILITY-ANALYSIS-2026-03-10.md  README.md  ROADMAP-2026-02-ARCHIVED.md  STATE-OF-STT-DAEMON-SERVER-2026-02-23.md  STREAMING-OVERLAY-ROLL-OUT-AND-VERIFICATION-PLAN-2026-03-06.md  STT-INPUT-INJECTION-ROADMAP-2026-02.md  gemini-TDT Streaming WER Gap Research.md  gemini-architectural-review-2026-03-06.md  overlay-renderer-perf-validation-and-handoff-2026-03-05.md  paste-gap-deep-dive-2026-03-11.md
docs/engineering/: harness-engineering-playbook.md
parakeet-ptt/: Cargo.toml
parakeet-ptt/.claude/skills/: rust-excellence
parakeet-ptt/src/: audio_feedback.rs  client.rs  config.rs  env_parse.rs  hotkey.rs  injector.rs  lib.rs  main.rs  overlay_ipc.rs  overlay_process.rs  overlay_renderer.rs  overlay_state.rs  protocol.rs  routing.rs  state.rs  surface_focus.rs
parakeet-stt-daemon/: README.md  check_model.py  main.py  pyproject.toml
parakeet-stt-daemon/check_model_lib/: __init__.py  cli.py  constants.py  corpus.py  metrics.py  reporting.py  runner.py  runtime.py  thresholds.py
parakeet-stt-daemon/scripts/: build_personal_eval_candidates.py  materialize_personal_manifest.py  record_personal_clips.sh
parakeet-stt-daemon/src/parakeet_stt_daemon/: __init__.py  __main__.py  audio.py  config.py  messages.py  model.py  server.py  session.py
parakeet-stt-daemon/tests/: test_cli_precedence.py  test_messages.py  test_offline_benchmark_harness.py  test_offline_in_memory_transcription.py  test_overlay_event_stream.py  test_session_cleanup.py  test_streaming_chunk_padding.py  test_streaming_truth.py
scripts/: check-stt-helper-flags.sh  harness-maintenance.sh  paste-gap-matrix.sh  stt-helper.sh
