[package]
name = "parakeet-ptt"
version = "0.1.0"
edition = "2021"
description = "Push-to-talk client for the Parakeet speech-to-text daemon"
license = "MIT"
repository = "https://github.com/SystemicVoid/parakeet-stt"

[[bin]]
name = "parakeet-ptt"
path = "src/main.rs"

[[bin]]
name = "parakeet-overlay"
path = "src/bin/parakeet-overlay.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
http = "1.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
time = { version = "0.3.36", features = ["formatting", "macros", "serde"] }
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
evdev = "0.12.2"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
which = "6.0.1"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
cosmic-protocols = { version = "0.2.0", default-features = false, features = ["client"] }
tempfile = "3.16.0"
fontdb = "0.17.0"
fontdue = "0.9.3"
