[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parakeet-stt-daemon"
version = "0.2.2"
description = "Local Parakeet push-to-talk daemon (WebSocket API + NeMo streaming)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.5",
  "uvicorn[standard]>=0.32.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "numpy>=1.24,<2",
  "sounddevice>=0.4.7",
  "loguru>=0.7.2",
  "nemo-toolkit[asr]>=2.6.2,<2.7",
  "silero-vad>=6,<7",
  "soundfile>=0.13.1",
  "omegaconf>=2.3.0",
  "onnxruntime>=1.22,<2",
]

[project.urls]
Homepage = "https://github.com/SystemicVoid/parakeet-stt"
Repository = "https://github.com/SystemicVoid/parakeet-stt"

[project.optional-dependencies]
inference = [
  "torch>=2.5.1",
  "nemo-toolkit[asr]>=2.6.2,<2.7",
]

[project.scripts]
parakeet-stt-daemon = "parakeet_stt_daemon.__main__:main"

[dependency-groups]
dev = [
  "ruff>=0.14.0",
  "pytest>=8.4.0",
  "deptry>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parakeet_stt_daemon"]

[tool.hatch.build.targets.sdist]
include = ["src/parakeet_stt_daemon", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", ".uv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "BLE"]

[tool.deptry]
known_first_party = ["parakeet_stt_daemon"]

[tool.hatch.metadata]
allow-direct-references = true
